OrderCRUD/ordercrudd_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordercrud
  labels:
    app: ordercrud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordercrud
  template:
    metadata:
      labels:
        app: ordercrud
    spec:
      containers:
      - name: ordercrud
        image: ganeshbabugopal/ordercrud
