OrderCRUD/ordercrudservice.yml
kind: Service
apiVersion: v1
metadata:
  name: ordercrud
spec:
  type: LoadBalancer
  selector:
    app: ordercrud
  ports:
  - protocol: TCP
    name: http
    port: 80
