OrderCRUD/ordercrud_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ordercrud-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ordercrud
spec:
  rules:
    - http:
        paths:
          - path: /productorder
            backend:
              serviceName: ordercrud
              servicePort: 80
          - path: /products
            backend:
              serviceName: productcrud
              servicePort: 80
